# podgen

./: CMakeLists.txt
cmake/: PodgenMacros.cmake
include/: defs.hpp  pod.hpp.tmpl  pod_convert.hpp.tmpl
src/: PodGenerator.cpp  PodGenerator.hpp  main.cpp  schema.cpp
